[gd_scene format=3 uid="uid://vj52o2gi3lfc"]

[ext_resource type="Theme" uid="uid://c3otby17v2wau" path="res://Assets/fonts/monospace.tres" id="1_theme"]
[ext_resource type="Texture2D" uid="uid://bc1yvyqjwxee" path="res://Assets/ui/main_menu_button2.png" id="2_normal"]
[ext_resource type="Texture2D" uid="uid://dqrs4dp02wqle" path="res://Assets/ui/main_menu_button.png" id="3_focused"]
[ext_resource type="Script" uid="uid://dudw3rxqekow1" path="res://Scripts/ui/main_menu/profile_button.gd" id="4_script"]
[ext_resource type="Shader" uid="uid://dltnkyf0hnwq0" path="res://Assets/materials/shaders/glitch.gdshader" id="5_glitch"]
[ext_resource type="Shader" uid="uid://cq3v485k8pb6o" path="res://Assets/materials/shaders/glitch_intense.gdshader" id="6_glitch_intense"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glitch"]
shader = ExtResource("5_glitch")
shader_parameter/range = 0.05
shader_parameter/noiseQuality = 300.0
shader_parameter/noiseIntensity = 0.001
shader_parameter/offsetIntensity = 0.001
shader_parameter/colorOffsetIntensity = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_glitch_intense"]
shader = ExtResource("6_glitch_intense")
shader_parameter/shake_power = 0.03
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 1.0
shader_parameter/shake_block_size = 60.0
shader_parameter/shake_color_rate = 0.03

[node name="ProfileButton" type="TextureButton" unique_id=1803546182]
custom_minimum_size = Vector2(200, 60)
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_theme")
texture_normal = ExtResource("2_normal")
texture_focused = ExtResource("3_focused")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_script")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=400404709]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer" unique_id=160983390]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Button"

[node name="shader_mask" type="TextureRect" parent="." unique_id=909561737]
clip_children = 1
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -51.0
offset_right = 100.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_behavior_recursive = 1
texture = ExtResource("2_normal")
expand_mode = 1
stretch_mode = 5

[node name="shader_glitch" type="TextureRect" parent="shader_mask" unique_id=162090213]
material = SubResource("ShaderMaterial_glitch")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_behavior_recursive = 1
texture = ExtResource("2_normal")
expand_mode = 1
stretch_mode = 5

[node name="shader_glitch_intense" type="TextureRect" parent="shader_mask" unique_id=1192750821]
visible = false
material = SubResource("ShaderMaterial_glitch_intense")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_behavior_recursive = 1
texture = ExtResource("2_normal")
expand_mode = 1
stretch_mode = 5

[node name="IntenseGlitchTimer" type="Timer" parent="." unique_id=369513666]

[connection signal="timeout" from="IntenseGlitchTimer" to="." method="_on_intense_glitch_timer_timeout"]
